--- a/app/src/main/res/layout/activity_poisk_voditel.xml
+++ b/app/src/main/res/layout/activity_poisk_voditel.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_superviser">
+        android:id="@+id/recycler_voditel">
 
     </android.support.v7.widget.RecyclerView>
 
