--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:text="manager@gmail.com"
         android:hint="Введите email"
         android:inputType="textEmailAddress"
         android:textSize="24sp" />
 
     <EditText
+        android:text="test123"
         android:id="@+id/field_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
