--- a/app/src/main/res/layout/activity_menedzher.xml
+++ b/app/src/main/res/layout/activity_menedzher.xml
@@ -120,6 +120,34 @@ public void sohranitDannye(){
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:layout_weight="100">
+
+                <TextView
+                    android:layout_width="82dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="30"
+                    android:text="План"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:textSize="16sp"
+                    android:hint="Фактически"
+                    android:layout_weight="30"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="12dp">
 
                 <TextView
@@ -155,7 +183,7 @@ public void sohranitDannye(){
 
                 <TextView
                     android:id="@+id/txt_ves_plan"
-                    android:layout_width="86dp"
+                    android:layout_width="96dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="30"
                     android:text="Вес"
