--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="manager@gmail.com"
+        android:text="test@gmail.com"
         android:hint="Введите email"
         android:inputType="textEmailAddress"
         android:textSize="24sp" />
