--- a/app/src/main/res/layout/activity_menedzher.xml
+++ b/app/src/main/res/layout/activity_menedzher.xml
@@ -124,13 +124,13 @@ public void sohranitDannye(){
                 android:layout_weight="100">
 
                 <TextView
-                    android:layout_width="82dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="40"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:layout_width="96dp"
+                    android:layout_width="6dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="30"
                     android:text="План"
@@ -141,19 +141,29 @@ public void sohranitDannye(){
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:textSize="16sp"
-                    android:hint="Фактически"
+                    android:hint="Факт"
                     android:layout_weight="30"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:weightSum="100">
+
+                <TextView
+                    android:id="@+id/txt_kolichestvo"
+                    android:layout_width="158dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:text="Количество"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/txt_kolichestvo_fact"
-                    android:layout_width="112dp"
+                    android:layout_width="155dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="30"
                     android:text="Количество"
                     android:textSize="16sp" />
 
@@ -161,10 +171,11 @@ public void sohranitDannye(){
                     android:id="@+id/field_kolichestvo_fact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="30"
                     android:inputType="number"
                     android:textSize="16sp"
-                    android:hint="Введите количество"/>
+                    android:hint="Введите количество"
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -174,7 +185,7 @@ public void sohranitDannye(){
                 android:layout_weight="100">
 
                 <TextView
-                    android:id="@+id/txt_ves_fact"
+                    android:id="@+id/txt_ves"
                     android:layout_width="82dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="40"
@@ -193,7 +204,7 @@ public void sohranitDannye(){
                     android:id="@+id/field_ves_fact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="16sp"
                     android:hint="Введите вес"
                     android:layout_weight="30"/>
@@ -225,7 +236,7 @@ public void sohranitDannye(){
                     android:id="@+id/field_volume"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="16sp"
                     android:hint="Введите объем"
                     android:layout_weight="30"/>
