--- a/app/src/main/res/layout/activity_superviser.xml
+++ b/app/src/main/res/layout/activity_superviser.xml
@@ -86,6 +86,27 @@
                 android:layout_margin="12dp">
 
                 <TextView
+                    android:id="@+id/txt_email"
+                    android:layout_width="112dp"
+                    android:layout_height="wrap_content"
+                    android:text="Email Заказчика"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/field_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/zEmail"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp">
+
+                <TextView
                     android:id="@+id/txt_zakazchik"
                     android:layout_width="112dp"
                     android:layout_height="wrap_content"
@@ -146,12 +167,50 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:layout_weight="100">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="6dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="30"
+                    android:text="План"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:textSize="16sp"
+                    android:hint="Факт"
+                    android:layout_weight="30"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:weightSum="100">
+
+                <TextView
+                    android:id="@+id/txt_kolichestvo"
+                    android:layout_width="158dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:text="Количество"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/txt_kolichestvo_fact"
-                    android:layout_width="112dp"
+                    android:layout_width="155dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="30"
                     android:text="Количество"
                     android:textSize="16sp" />
 
@@ -159,21 +218,32 @@
                     android:id="@+id/field_kolichestvo_fact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="30"
                     android:inputType="number"
                     android:textSize="16sp"
-                    android:hint="Введите количество"/>
+                    android:hint="Введите количество"
+                    />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:layout_weight="100">
 
                 <TextView
-                    android:id="@+id/txt_ves_fact"
-                    android:layout_width="112dp"
+                    android:id="@+id/txt_ves"
+                    android:layout_width="82dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="40"
+                    android:text="Вес"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/txt_ves_plan"
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="30"
                     android:text="Вес"
                     android:textSize="16sp" />
 
@@ -181,32 +251,42 @@
                     android:id="@+id/field_ves_fact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="16sp"
-                    android:hint="Введите вес"/>
+                    android:hint="Введите вес"
+                    android:layout_weight="30"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:layout_weight="100">
 
                 <TextView
                     android:id="@+id/txt_volume"
                     android:layout_width="112dp"
                     android:layout_height="wrap_content"
                     android:text="Объем"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:layout_weight="40"/>
+
+                <TextView
+                    android:id="@+id/txt_planvolume"
+                    android:layout_width="112dp"
+                    android:layout_height="wrap_content"
+                    android:text="Объем"
+                    android:textSize="16sp"
+                    android:layout_weight="30"/>
 
                 <EditText
                     android:id="@+id/field_volume"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="16sp"
-                    android:hint="Введите объем"/>
+                    android:hint="Введите объем"
+                    android:layout_weight="30"/>
             </LinearLayout>
 
             <LinearLayout
@@ -236,7 +316,7 @@
                 android:layout_margin="12dp"
                 android:gravity="center">
 
-                <CheckBox
+                <Button
                     android:id="@+id/txt_povrezhden"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
